correcciones diego 	10 go routines que cotizan las monedas en un channel 	mejora en la construccion de sql para cotizaciones 	retorno de cantidad de registros 	falta hacer el resumen
Nuevos requerimientos:
	existen usuarios
	se puede filtrar las cotizaciones por usuarios
